Actualización proyecto y portafolio

--- a/portafolio.html
+++ b/portafolio.html
@@ -31,18 +31,26 @@
             </tr>
             <tr>
                 <td>
-                    Proyecto 2
+                    Iguana page
                 </td>
                 <td>
-                    Screenshot proyecto 2
+                    <img src="assets/imgs/portafolio/iguana.png" alt="proyecto iguana" width="613" height="277">
                 </td>
             </tr>
             <tr>
                 <td>
-                    Proyecto 3
+                    Liquor store
                 </td>
                 <td>
-                    Screenshot proyecto 3
+                    <img src="assets/imgs/portafolio/liquor.png" alt="proyecto flex" width="613" height="277">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Cuppon
+                </td>
+                <td>
+                    <img src="assets/imgs/portafolio/cupon.png" alt="proyecto cupon" width="613" height="277">
                 </td>
             </tr>
         </tbody>
