portafolio actualizado y linkeado

--- a/portafolio.html
+++ b/portafolio.html
@@ -1,67 +1,94 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>biLLY buRRoughs</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" href="./assets/imgs/favicon/billy.jpeg">
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="icon" href="./assets/imgs/favicon/billy.jpeg" />
+  </head>
+  <body>
     <h1 class="titulo">Portafolio</h1>
     <table border="1">
-        <thead>
-            <tr>
-                <th>
-                    Proyecto
-                </th>
-                <th>
-                    Captura
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>
-                    Curriculum
-                </td>
-                <td>
-                    <img src="./assets/imgs/portafolio/proyecto1.png" alt="screenshot proyecto curriculum" width="613" height="277">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Iguana page
-                </td>
-                <td>
-                    <img src="assets/imgs/portafolio/iguana.png" alt="proyecto iguana" width="613" height="277">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Liquor store
-                </td>
-                <td>
-                    <img src="assets/imgs/portafolio/liquor.png" alt="proyecto flex" width="613" height="277">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Cuppon
-                </td>
-                <td>
-                    <img src="assets/imgs/portafolio/cupon.png" alt="proyecto cupon" width="613" height="277">
-                </td>
-            </tr>
-        </tbody>
+      <thead>
+        <tr>
+          <th>Proyecto</th>
+          <th>Captura</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <p>Proyecto Curriculum</p>
+            <a href="https://github.com/villouted/cvdesafio" target="_blank"
+              >Ver repositorio del proyecto</a
+            >
+          </td>
+          <td>
+            <img
+              src="./assets/imgs/portafolio/proyecto1.png"
+              alt="screenshot proyecto curriculum"
+              width="613"
+              height="277"
+            />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <p>Proyecto Iguana Page</p>
+            <a href="https://github.com/villouted/iguanapage" target="_blank"
+              >Ver repositorio del proyecto</a
+            >
+          </td>
+          <td>
+            <img
+              src="assets/imgs/portafolio/iguana.png"
+              alt="proyecto iguana"
+              width="613"
+              height="277"
+            />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <p>Proyecto landingpage</p>
+            <a href="https://github.com/villouted/landingpage" target="_blank"
+              >Ver repositorio del proyecto</a
+            >
+          </td>
+          <td>
+            <img
+              src="assets/imgs/portafolio/liquor.png"
+              alt="proyecto flex"
+              width="613"
+              height="277"
+            />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <p>Proyecto Cuppon</p>
+            <a href="https://github.com/villouted/bootstraprep" target="_blank"
+              >Ver repositorio del proyecto</a
+            >
+          </td>
+          <td>
+            <img
+              src="assets/imgs/portafolio/cupon.png"
+              alt="proyecto cupon"
+              width="613"
+              height="277"
+            />
+          </td>
+        </tr>
+      </tbody>
     </table>
 
-    <p>
-        Ver CV: <a href="index.html">biLLy CV</a>
-    </p>
-    <hr>
+    <p>Ver CV: <a href="index.html">biLLy CV</a></p>
+    <hr />
     <footer>
-        Página para uso exclusivo del curso G86 Desafío Latam. <br> 2024. by vlltd.
+      Página para uso exclusivo del curso G86 Desafío Latam. <br />
+      2024. by vlltd.
     </footer>
-</body>
+  </body>
 </html>
